# QuantLibAddin-Old

./: .gitignore  CNTLM SETUP.md  GIT SETUP.md  README.md
ObjectHandler/: .gitignore  Makefile.am  ObjectHandler.nsi  ObjectHandler.props  ObjectHandler.sln  ObjectHandler_vc9.sln  cmd  configure.ac  ohlib.vcxproj  ohlib_vc10.vcxproj  ohlib_vc10.vcxproj.filters  ohlib_vc11.vcxproj  ohlib_vc12.vcxproj  ohlib_vc14.vcxproj  ohlib_vc8.vcproj  ohlib_vc9.vcproj
ObjectHandler/Docs/: Makefile.am  docs.vcxproj  docs_vc14.vcxproj  objecthandler.doxy  oh_header.html  oh_headeronline.html  preprocess_doxyfile.py
ObjectHandler/Docs/auto.pages/: allfunctions.docs  categories.docs  enumerations.docs  garbagecollection.docs  group.docs  logging.docs  objects.docs  ohutils.docs  range.docs  serialization.docs  valueobjects.docs
ObjectHandler/Docs/pages/: conventions.docs  copyright_license.docs  history.docs  installation.docs  version_history.docs
ObjectHandler/Examples/C++/: ExampleCpp.vcxproj  ExampleCpp_vc10.vcxproj  ExampleCpp_vc11.vcxproj  ExampleCpp_vc12.vcxproj  ExampleCpp_vc14.vcxproj  ExampleCpp_vc8.vcproj  ExampleCpp_vc9.vcproj  Makefile.am
ObjectHandler/Examples/ExampleObjects/: ExampleObjects.vcxproj  ExampleObjects_vc10.vcxproj  ExampleObjects_vc11.vcxproj  ExampleObjects_vc12.vcxproj  ExampleObjects_vc14.vcxproj  Makefile.am
ObjectHandler/Examples/xl/: ExampleXllDynamic1.vcxproj  ExampleXllDynamic1_vc10.vcxproj  ExampleXllDynamic1_vc11.vcxproj  ExampleXllDynamic1_vc12.vcxproj  ExampleXllDynamic1_vc14.vcxproj  ExampleXllDynamic1_vc8.vcproj  ExampleXllDynamic1_vc9.vcproj  ExampleXllDynamic2.vcxproj  ExampleXllDynamic2_vc10.vcxproj  ExampleXllDynamic2_vc11.vcxproj  ExampleXllDynamic2_vc12.vcxproj  ExampleXllDynamic2_vc14.vcxproj  ExampleXllDynamic2_vc8.vcproj  ExampleXllDynamic2_vc9.vcproj  ExampleXllStatic.vcxproj  Makefile.am  (+6 more)
ObjectHandler/dev_tools/: find_replace.bat  find_replace.py  logos.xcf  notes.txt  release_notice.txt  upgrade_vc.py
ObjectHandler/gensrc/: Makefile.am  ohgensrc.vcxproj  ohgensrc_vc14.vcxproj
ObjectHandler/oh/: Makefile.am  addin.cpp  addin.hpp  auto_link.hpp  logger.hpp  ohdefines.hpp  property.hpp  serializationfactory.cpp  serializationfactory.hpp
ObjectHandler/ohxl/: Makefile.am  functioncall.cpp  rangereference.cpp  rangereference.hpp
ObjectHandler/site/: Makefile  footer.html  gensrc.doxy  header.html  make.bat
ObjectHandler/xlsdk/: Makefile.am  auto_link.hpp  xlsdk.vcxproj  xlsdk_vc14.vcxproj
QuantLibAddin/: .gitignore  Makefile.am  QuantLibAddin.nsi  QuantLibAddin.sln  QuantLibObjects.vcxproj  QuantLibObjects2.vcxproj  QuantLibObjects2_vc10.vcxproj  QuantLibObjects2_vc11.vcxproj  QuantLibObjects2_vc11.vcxproj.filters  QuantLibObjects2_vc12.vcxproj  QuantLibObjects2_vc14.vcxproj  QuantLibObjects2_vc14.vcxproj.filters  QuantLibObjects3.vcxproj  QuantLibObjects3.vcxproj.filters  QuantLibObjects3_vc10.vcxproj  QuantLibObjects3_vc11.vcxproj  QuantLibObjects3_vc12.vcxproj  QuantLibObjects3_vc14.vcxproj  QuantLibObjects3_vc14.vcxproj.filters  QuantLibObjects4.vcxproj  QuantLibObjects4.vcxproj.filters  QuantLibObjects4_vc10.vcxproj  QuantLibObjects4_vc11.vcxproj  QuantLibObjects4_vc12.vcxproj  QuantLibObjects4_vc12.vcxproj.filters  QuantLibObjects4_vc14.vcxproj  QuantLibObjects4_vc14.vcxproj.filters  QuantLibObjects_vc10.vcxproj  QuantLibObjects_vc10.vcxproj.filters  QuantLibObjects_vc11.vcxproj  QuantLibObjects_vc11.vcxproj.filters  QuantLibObjects_vc12.vcxproj  QuantLibObjects_vc14.vcxproj  QuantLibObjects_vc8.vcproj  QuantLibObjects_vc9.vcproj  cmd  configure.ac
QuantLibAddin/Docs/: Makefile.am  docs-QuantLibAddin.vcxproj  docs-QuantLibAddin_vc14.vcxproj  qla_header.html  qla_headeronline.html  quantlibaddin.doxy
QuantLibAddin/gensrc/: Makefile.am  cmd  qlgensrc.vcxproj  qlgensrc_vc12.vcxproj  qlgensrc_vc12.vcxproj.filters  qlgensrc_vc14.vcxproj  qlgensrc_vc14.vcxproj.filters  qlgensrc_vc9.vcproj
QuantLibAddin/qlo/: Makefile.am  abcd.cpp  abcd.hpp  abcdmathfunction.hpp  arithmeticaverageois.cpp  arithmeticaverageois.hpp  auto_link.hpp  calibrationhelpers.cpp  calibrationhelpers.hpp  capletvolstructure.cpp  capletvolstructure.hpp  couponvectors.cpp  date.hpp  interpolation.cpp  interpolation.hpp  leg.cpp  mathf.hpp  model.cpp  model.hpp  models.hpp  optimization.cpp  optimization.hpp  overnightindexedswap.cpp  overnightindexedswap.hpp  piecewiseyieldcurve.cpp  piecewiseyieldcurve.hpp  pricingengines.cpp  pricingengines.hpp  qladdindefines.hpp  quantoforwardvanillaoption.hpp  ratehelpers.cpp  ratehelpers.hpp  schedule.cpp  schedule.hpp  shortratemodels.cpp  shortratemodels.hpp  smilesection.cpp  smilesection.hpp  tenorbasis.cpp  tenorbasis.hpp  (+3 more)
QuantLibXL/: .gitignore  Makefile.am  QuantLibAllDynamic.sln  QuantLibAllDynamic_vc9.sln  QuantLibXL-bin.nsi  QuantLibXL-network.nsi  QuantLibXL-src.nsi  QuantLibXL.nsi  QuantLibXL_basic.sln  QuantLibXL_full.sln  cmd  configure.ac  make_zip.py  make_zip_mi.bat  make_zip_mi.py
QuantLibXL/Docs/: Makefile.am  docs-QuantLibXL.vcxproj  docs-QuantLibXL_vc14.vcxproj  qlxl_header.html  qlxl_headeronline.html  quantlibxl.doxy
QuantLibXL/LauncherFrameworks/: QuantLibXL.xml
QuantLibXL/framework/: QuantLibXL.xla
QuantLibXL/qlxl/: Makefile.am  QuantLibXLDynamic.vcxproj  QuantLibXLDynamic.vcxproj.filters  QuantLibXLDynamic_vc10.vcxproj  QuantLibXLDynamic_vc10.vcxproj.filters  QuantLibXLDynamic_vc11.vcxproj  QuantLibXLDynamic_vc12.vcxproj  QuantLibXLDynamic_vc12.vcxproj.filters  QuantLibXLDynamic_vc14.vcxproj  QuantLibXLDynamic_vc8.vcproj  QuantLibXLDynamic_vc9.vcproj  QuantLibXLStatic.vcxproj  QuantLibXLStatic.vcxproj.filters  QuantLibXLStatic2.vcxproj  QuantLibXLStatic2.vcxproj.filters  QuantLibXLStatic2_vc10.vcxproj  QuantLibXLStatic2_vc11.vcxproj  QuantLibXLStatic2_vc12.vcxproj  QuantLibXLStatic2_vc14.vcxproj  QuantLibXLStatic_vc10.vcxproj  QuantLibXLStatic_vc11.vcxproj  QuantLibXLStatic_vc11.vcxproj.filters  QuantLibXLStatic_vc12.vcxproj  QuantLibXLStatic_vc14.vcxproj  QuantLibXLStatic_vc14.vcxproj.filters  QuantLibXLStatic_vc8.vcproj  QuantLibXLStatic_vc9.vcproj
QuantLibXL/zip/: unzip.bat
(+261 files in other folders)
