
EXTRA_DIST = \
    AddinExcelDynamic.vcxproj \
    AddinExcelDynamic.vcxproj.filters \
    AddinExcelStatic.vcxproj \
    AddinExcelStatic.vcxproj.filters \
    AddinExcelStatic2.vcxproj \
    AddinExcelStatic2.vcxproj.filters \
    date.cpp \
    calendar.cpp \
    capfloor.cpp \
    couponvectors.cpp \
    conversions.cpp \
    conversions.hpp \
    daycounter.cpp \
    exercise.cpp \
    instruments.cpp \
    interpolation.cpp \
    mathf.cpp \
    options.cpp \
    prices.cpp \
    processes.cpp \
    qladdin.cpp \
    randomsequencegenerator.cpp \
    schedule.cpp \
    session.cpp \
    session.hpp \
    shortratemodels.cpp \
    simpleswap.cpp \
    swap.cpp \
    termstructures.cpp \
    utilities.cpp \
    volatilities.cpp \
    xibor.cpp

