
EXTRA_DIST = \
    accountingengines.cpp \
    accountingengines.hpp \
    assetswap.cpp \
    assetswap.hpp \
    bonds.cpp \
    bonds.hpp \
    browniangenerators.cpp \
    browniangenerators.hpp \
    calcaddins.cpp \
    calcaddins.hpp \
    calcaddins.idl \
    calcutils.cpp \
    calcutils.hpp \
    calendar.cpp \
    calendar.hpp \
    calibrationhelpers.cpp \
    calibrationhelpers.hpp \
    capfloor.cpp \
    capfloor.hpp \
    capletvolstructure.cpp \
    capletvolstructure.hpp \
    conversions.cpp \
    conversions.hpp \
    correlation.cpp \
    correlation.hpp \
    couponvectors.cpp \
    couponvectors.hpp \
    credit.cpp \
    credit_fix.cpp \
    credit.hpp \
    daycounter.cpp \
    daycounter.hpp \
    defaultbasket.cpp \
    defaultbasket.hpp \
    defaulttermstructures.cpp \
    defaulttermstructures.hpp \
    environment.bat \
    environment.sh \
    evolutiondescription.cpp \
    evolutiondescription.hpp \
    exercise.cpp \
    exercise.hpp \
    funcdef.cpp \
    handles.cpp \
    handles.hpp \
    HOWTO.TXT \
    index.cpp \
    index.hpp \
    init.cpp \
    init.hpp \
    instruments.cpp \
    instruments.hpp \
    interpolation.cpp \
    interpolation.hpp \
    latentmodels.cpp \
    latentmodels.hpp \
    leg.cpp \
    leg.hpp \
    logging.cpp \
    logging.hpp \
    loop.hpp \
    Makefile.oo \
    marketmodelevolvers.cpp \
    marketmodelevolvers.hpp \
    marketmodels.cpp \
    marketmodels.hpp \
    options.cpp \
    options.hpp \
    payoffs.cpp \
    payoffs.hpp \
    piecewiseyieldcurve.cpp \
    piecewiseyieldcurve_fix.cpp \
    piecewiseyieldcurve.hpp \
    pricingengines.cpp \
    pricingengines.hpp \
    processes.cpp \
    processes.hpp \
    products.cpp \
    products.hpp \
    qladdin.cpp \
    qladdin.hpp \
    qldefs.hpp \
    qlo_all.hpp \
    QuantLibAddinCalc.idl \
    quotes.cpp \
    quotes.hpp \
    randomsequencegenerator.cpp \
    randomsequencegenerator.hpp \
    rangeaccrual.cpp \
    rangeaccrual.hpp \
    ratehelpers.cpp \
    ratehelpers.hpp \
    Readme.txt \
    schedule.cpp \
    schedule.hpp \
    sequencestatistics.cpp \
    sequencestatistics.hpp \
    serialization.cpp \
    serialization.hpp \
    settings.cpp \
    settings.hpp \
    shortratemodels.cpp \
    shortratemodels.hpp \
    swap.cpp \
    swap.hpp \
    swaption.cpp \
    swaption.hpp \
    swaptionvolstructure.cpp \
    swaptionvolstructure.hpp \
    symbols.txt \
    termstructures.cpp \
    termstructures_fix.cpp \
    termstructures.hpp \
    utilities.cpp \
    utilities.hpp \
    vanillaswap.cpp \
    vanillaswap.hpp \
    volatilities.cpp \
    volatilities.hpp \
    volatility.cpp \
    volatility.hpp

